tests/ui/runtime-tap-event-fields-private.rs
use hibana::runtime::tap::TapEvent;

fn main() {
    let _ = TapEvent { bytes: [0; 16] };
}
